2.5.7:

2005-02-23  Roel Vanhout  <roel.vanhout@gmail.com>

	* docs/tutorial/: Experimental generation of the html with 
	phpWebNotes code, to allow online comments. Not used yet.

2005-02-18  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_signals.defs: Removed some more quotes from inside 
	the properties docs strings, because gmmproc can not handle those yet.

2005-02-18  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellrenderer.hg: start_editing(): Add a default value of 0 
	for the last flags parameter, because this is a valid value.
	* examples/book/treeview/editable_cells: Added a number_validated 
	column, which shows how to handle edited cells without the 
	convenience functions, and how to validate date.

2005-02-15  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/messagedialog.hg: Deprecate set_markup in favour of 
	set_message(string, false), which now uses the new 
	gtk_message_dialog_set_markup() function. We should not have added 
	this, but we are past API freeze now. Added documentation for 
	set_message() and set_secondary_text().
	* examples/book/dialogs/messagedialog/examplewindow.cc: Used 
	set_secondary_text().

2005-02-13  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellview.hg, comboboxentry.hg, image.hg, main.hg,
	gkd/src/pixbuf.hg: Corrected some minor doxygen documenation errors.

2005-02-13  Murray Cumming  <murrayc@murrayc.com>

	* atk/src/atk_signals.defs, gdk/src/gdk_signals.defs, 
	gtk/gtk_signals.defs: Regenerate with latest extra_defs_gen, to get 
	the property documentation.
	* docs/reference: Added widget_hierarchy html image map and .dia 
	original from Marco Scholten in bug 88610.
	* docs/index.html: Added link to hierarchy.
	* docs/reference/Makefile.am: Add extra commands to install and 
	upload the widget_hierarchy files.

2005-02-13  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellrenderertext.hg: Added documentation for the edited() 
	method. Bug found by Antonio Coralles.
