@@ -104,7 +104,7 @@ with this document, and would appreciate input regarding improvements. Please se
 </para>
 </sect1>
 
-<sect1>
+<sect1 id="sec-gtkmm">
 <title>gtkmm</title>
 <para>
 gtkmm is a C++ wrapper for 
@@ -169,10 +169,10 @@ And GTK+ also requires these packages.
 </itemizedlist>
 </sect1>
 
-<sect1>
+<sect1 id="sec-install_unix_and_linux">
 <title>Unix and Linux</title>
 
-<sect2>
+<sect2 id="sec-install_from_source">
 <title>From Source</title>
 
 <para>
@@ -220,7 +220,7 @@ If you use stable/woody however, you'll have to compile gtkmm yourself.
 </sect2>
 </sect1>
 
-<sect1>
+<sect1 id="sec-packages_windows">
 <title>Microsoft Windows</title>
 <para>GTK+ and gtkmm were designed to work well with Microsoft Windows, and the developers encourage its use on the win32 platform.  However, Windows has no standard installation system for development libraries. Please see the <link linkend="sec-windows-installation">Windows Installation</link>
 appendix for win32-specific installation instructions and notes.</para>
@@ -333,7 +333,7 @@ find them in. Try running it from your shell-prompt to see the results on your s
 </para>
 </sect1>
 
-<sect1>
+<sect1 id="sec-widgets">
 <title>Widgets</title>
 <para>gtkmm applications consist of windows containing widgets, such as buttons and text boxes. In some other systems, widgets are called "controls". For each widget in your application's windows, there is a C++ object in your application's code. So you just need to call a method of the widget's class to affect the visible widget.</para>
  <para>Widgets are arranged inside container widgets such as frames and notebooks, in a hierarchy of widgets within widgets. Some of these container widgets, such as Gtk::VBox, are not visible - they exist only to arrange other widgets. Here is some example code that adds 2 Gtk::Button widgets to a Gtk::VBox container widgets:
@@ -358,7 +358,7 @@ Most of the chapters in this book deal with specific widgets. See the <link link
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-signals">
 <title>Signals</title>
 
 <para>
@@ -409,7 +409,7 @@ just connecting to the existing gtkmm signals, see the <link linkend="sec-append
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-helloworld">
 <title>Hello World in gtkmm</title>
 
 <para>
@@ -907,7 +907,7 @@ There are horizontal and vertical scrollbar classes - <literal>Gtk::HScrollbar</
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-scale_widgets">
 <title>Scale Widgets</title>
 
 <para>
@@ -949,7 +949,7 @@ relative to the trough, specified by the <literal>set_value_pos()</literal> meth
 </sect2>
 </sect1>
 
-<sect1>
+<sect1 id="sec-update_policies">
 <title>Update Policies</title>
 
 <para>
@@ -2575,14 +2575,14 @@ it as a Model column, but don't add it to the View.
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-treeview">
 <title>The View</title>
 <para>The View is the actual widget (Gtk::TreeView) that displays the model (Gtk::TreeModel) data and allows the user to interact with it. The View can show all of the model's columns, or just some, and it can show them in various ways. 
 </para>
 
 <para><ulink url="&url_refdocs_base_gtk;TreeView.html">Reference</ulink></para>
 
-<sect2>
+<sect2 id="sec-using_a_model">
 <title>Using a Model</title>
 <para>
 You can specify a Gtk::TreeModel when constructing the Gtk::TreeView,
@@ -2730,7 +2730,7 @@ store it in the Model if that is appropriate for your application.
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-iterating_over_model_rows">
 <title>Iterating over Model Rows</title>
 <para>
 Gtk::TreeModel provides an STL-style container of its children, via
@@ -2761,7 +2761,7 @@ Gtk::TreeModel::Children children = row.children();
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-treeview_selection">
 <title>The Selection</title>
 <para>
 To find out what rows the user has selected, get the
@@ -2896,7 +2896,7 @@ if(iter)
 
 </sect1>
 
-<sect1><title>Examples</title>
+<sect1 id="sec-treeview_examples"><title>Examples</title>
 
 <sect2><title>ListStore</title>
 <para>This example has a <literal>Gtk::TreeView</literal> widget, with a <literal>Gtk::ListStore</literal> model.</para>
@@ -2928,7 +2928,7 @@ if(iter)
 
 </sect2>
 
-<sect2><title>Editable Cells</title>
+<sect2 id="sec-editable_cells_example"><title>Editable Cells</title>
 
 <para>
 This example is identical to the ListStore example, but it uses <literal>TreeView::append_column_editable()</literal> instead of <literal>TreeView::append_column()</literal>.
@@ -3106,7 +3106,7 @@ As mentioned above, each <literal>TextView</literal> has a <literal>TextBuffer</
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-widgets_and_childanchors">
 <title>Widgets and ChildAnchors</title>
 <para>
 You can embed widgets, such as <literal>Gtk::Button</literal>s, in the text. Each such child widget needs a <literal>ChildAnchor</literal>. ChildAnchors are associated with <literal>iterators</literal>. For instance, to create a child anchor at a particular position, use <literal>Gtk::TextBuffer::create_child_anchor()</literal>:
@@ -3127,7 +3127,7 @@ m_TextView.add_child_at_anchor(m_Button, refAnchor);
 
 </sect1>
 
-<sect1><title>Examples</title>
+<sect1 id="sec-examples"><title>Examples</title>
 
 <sect2><title>Simple Example</title>
 
@@ -3343,7 +3343,7 @@ TODO: Investigate the upper argument properly. There was some unclear stuff abou
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-adjustments_the_easy_way">
 <title>Using Adjustments the Easy Way</title>
 
 <para>
@@ -3383,7 +3383,7 @@ widget. You can set it up like this:
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-adjustment_internals">
 <title>Adjustment Internals</title>
 
 <para>
@@ -3443,7 +3443,7 @@ adjustment-&#62;changed();
 
 </chapter>
 
-<chapter>
+<chapter id="widgets_without_xwindows">
 <title>Widgets Without X-Windows</title>
 
 <para>
@@ -3563,7 +3563,7 @@ To pack widgets into a custom dialog, you should pack them into the <literal>Gtk
 
 <para><ulink url="&url_refdocs_base_gtk;Dialog.html">Reference</ulink></para>
 
-<sect1><title>MessageDialog</title>
+<sect1 id="sec-dialogs_messagedialog"><title>MessageDialog</title>
 <para>
 This is a convenience class, used to create simple, standard message dialogs, with a message, an icon, and buttons for user response. You can specify the type of message and the text in the constructor, as well as specifying standard buttons via the  <literal>Gtk::ButtonsType</literal> enum.
 </para>
@@ -3585,7 +3585,7 @@ This is a convenience class, used to create simple, standard message dialogs, wi
 
 </sect1>
 
-<sect1><title>FileChooserDialog</title>
+<sect1 id="sec-dialogs_filechooserdialog"><title>FileChooserDialog</title>
 <para>
 This dialog is suitable for use with &quot;Open&quot; or &quot;Save&quot; menu items. 
 </para>
@@ -3609,7 +3609,7 @@ Most useful member methods for this class are actually in the Gtk::FileChooser b
 </sect2>
 </sect1>
 
-<sect1><title>ColorSelectionDialog</title>
+<sect1 id="sec-color_selection_dialog"><title>ColorSelectionDialog</title>
 <para>
 This dialog allows the user to choose a color.
 </para>
@@ -3631,7 +3631,7 @@ This dialog allows the user to choose a color.
 
 </sect1>
 
-<sect1><title>FontSelectionDialog</title>
+<sect1 id="sec-font_selection_dialog"><title>FontSelectionDialog</title>
 <para>
 This dialog allows the user to choose a font.
 </para>
@@ -3708,7 +3708,7 @@ some_gc.set_foreground(some_color);
       solid polygons.
     </para>
   </sect1>
-  <sect1>
+  <sect1 id="sec-drawing_pixels">
     <title>Drawing Pixels</title>
     <para>
       You can draw individual pixels with the two methods <function>Gdk::Drawable::draw_point()</function> and <function>
@@ -3732,7 +3732,7 @@ draw_points(some_gc, points_array); //One way to draw the two points.
 
     </programlisting>
   </sect1>
-  <sect1>
+  <sect1 id="sec-drawing_lines">
     <title>Drawing Lines</title>
     <sect2><title>Example</title>
     <para>
@@ -3763,7 +3763,7 @@ draw_points(some_gc, points_array); //One way to draw the two points.
     </para>
     </sect2>
   </sect1>
-  <sect1>
+  <sect1 id="sec-drawing_rectangles_and_polygons">
     <title>Drawing Rectangles and Polygons</title>
     <para>
       The <function>draw_rectangle()</function> method draws rectangles and squares. The second argument determines whether
@@ -3786,7 +3786,7 @@ draw_points(some_gc, points_array); //One way to draw the two points.
       This of course implies that you do not need to repeat the first point as the last point.
     </para>
   </sect1>
-  <sect1>
+  <sect1 id="sec-drawing_ellipses_and_arcs">
     <title>Drawing Ellipses and Arcs</title>
     <para>
       The <function>draw_arc()</function> has a lot of parameters. The second one is again for the choice of filled or unfilled arc.
@@ -3800,7 +3800,7 @@ draw_points(some_gc, points_array); //One way to draw the two points.
       angle is measured in 1/64th of a degree, starts at the right, and runs counter-clockwise.
     </para>
   </sect1>
-  <sect1>
+  <sect1 id="sec-drawing_text">
     <title>Drawing Text</title>
     <para>
       Text is drawn via Pango Layouts. The easiest way to create a <classname>Pango::Layout</classname> is to use
@@ -3828,7 +3828,7 @@ draw_points(some_gc, points_array); //One way to draw the two points.
     </para>
     </sect2>
   </sect1>
-  <sect1>
+  <sect1 id="sec-draw_images">
     <title>Draw Images</title>
     <para>
       There are a couple of drawing methods for putting image data into a drawing area. <function>draw_pixmap()</function> can
@@ -3888,7 +3888,7 @@ bool myarea::on_expose_event(GdkEventExpose* ev)
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-drag_and_drop_methods">
 <title>Methods</title>
 <para>Widgets can be identified as sources or destinations using these Gtk::Widget methods:</para>
 <para>
@@ -3915,11 +3915,11 @@ void drag_dest_set(const ArrayHandle_TargetEntry&amp; targets, GtkDestDefaults f
 </para>
 </sect1>
 
-<sect1>
+<sect1 id="sec-drag_and_drop_signals">
 <title>Signals</title>
 <para>When a drop destination has accepted a dragged item, certain signals will be emitted, depending on what action has been selected. For instance, the user might have held down the <literal>Shift</literal> key to specify a <literal>move</literal> rather than a <literal>copy</literal>. Remember that the user can only select the actions which you have specified in your calls to <literal>drag_dest_set()</literal> and <literal>drag_source_set()</literal>.</para>
 
-<sect2>
+<sect2 id="sec-drag_and_drop_copy">
 <title>Copy</title>
 <para>
 The source widget will emit these signals, in this order:
@@ -3955,14 +3955,14 @@ The destination widget will emit this signal, after the source destination has e
 </sect2>
 </sect1>
 
-<sect1>
+<sect1 id="sec-dragcontext">
 <title>DragContext</title>
 <para>
 The drag and drop signals provide a DragContext, which contains some information about the drag and drop operation and can be used to influence the process. For instance, you can discover the source widget, or  change the drag and drop icon, by using the <literal>set_icon()</literal> methods. More importantly, you should call the <literal>drag_finish()</literal> method from your <literal>drag_data_received</literal> signal handler to indicate whether the drop was successful.
 </para>
 </sect1>
 
-<sect1>
+<sect1 id="sec-drag_and_drop_example">
 <title>Example</title>
 <para>Here is a very simple example, demonstrating a drag and drop <literal>Copy</literal> operation:</para>
 
@@ -4009,7 +4009,7 @@ For instance, gedit can supply and receive the <literal>&quot;UTF8_STRING&quot;<
 <para>The <link linkend="sec-draganddrop">Drag and Drop</link> API uses the same mechanism. You should probably use the same data targets and formats for both Clipboard and Drag and Drap operations.</para>
 </sect1>
 
-<sect1>
+<sect1 id="sec-drag_and_drop_copy">
 <title>Copy</title>
 <para>
 When the user asks to copy some data, you should tell the clipboard what targets are available, and provide the callback methods that it can use to get the data. At this point you should store a copy of the data, to be provided when the clipboard calls your callback method in repsonse to a paste.
@@ -4033,7 +4033,7 @@ refClipboard-&gt;set( listTargets,
 <programlisting>
 void ExampleWindow::on_clipboard_get(Gtk::SelectionData&amp; selection_data, guint info)
 { 
-  const Glib::ustring&amp; target = selection_data.get_target(); 
+  const Glib::ustring target = selection_data.get_target(); 
   
   if(target == &quot;example_custom_target&quot;)
     selection_data.set(&quot;example_custom_target&quot;, m_ClipboardStore);
@@ -4047,7 +4047,7 @@ The <literal>ideal</literal> example below can supply more than one clipboard ta
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-drag_and_drop_paste">
 <title>Paste</title>
 <para>
 When the user asks to paste data from the clipboard, you should request a specific format and provide a callback method which will be called with the actual data. For instance: 
@@ -4100,9 +4100,9 @@ void ExampleWindow::on_clipboard_received_targets(const Gtk::SelectionData&amp; 
 
 </sect1>
 
-o<sect1><title>Examples</title>
+<sect1 id="sec-clipboard_examples"><title>Examples</title>
 
-<sect2><title>Simple</title>
+<sect2 id="sec-clipboard-example-simple"><title>Simple</title>
 <para>This example allows copy and pasting of application-specific data, using the standard text target. Although this is simple, it's not ideal because
 it does not identify the clipboard data as being of a particular type.</para>
 
@@ -4117,7 +4117,7 @@ it does not identify the clipboard data as being of a particular type.</para>
 
 </sect2>
 
-<sect2><title>Ideal</title>
+<sect2 id="sec-clipboard-example-ideal"><title>Ideal</title>
 <para>This is like the simple example, but it 
 <orderedlist>
 <listitem><simpara>Defines a custom clipboard target, though the format of that target is still text.</simpara></listitem>
@@ -4210,7 +4210,7 @@ Here's an example of this technique:
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-monitoring_io">
 <title>Monitoring I/O</title>
 
 <para>
@@ -4297,7 +4297,7 @@ type <literal>quit</literal>.
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-idle_functions">
 <title>Idle Functions</title>
 
 <para>
@@ -4603,7 +4603,7 @@ Glib::RefPtr&lt;Gnome::Glade::Xml&gt; refXml = Gnome::Glade::Xml::create(&quot;b
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-accessing_widgets">
 <title>Accessing widgets</title>
 
 <para>
@@ -4631,7 +4631,7 @@ Windows (such as Dialogs) can not be managed because they have no parent contain
 </sect1>
 
 
-<sect1>
+<sect1 id="sec-using_derived_widgets">
 <title>Using derived widgets</title>
 <para>
 You can use Glade to layout your own custom widgets derived from gtkmm widget classes. This keeps your code organised and encapsulated. Of course you won't see the exact appearance and properties of your derived widget in Glade, but you can specify its location and child widgets and the properties of its gtkmm base class.
@@ -4765,7 +4765,7 @@ label.set_text(_("This is some text"));
     </sect2>
 </sect1>
 
-<sect1>
+<sect1 id="sec-expecting_utf8">
 <title>Expecting UTF8</title>
 <para>
 A properly internationalized application will not make assumptions about the number of bytes in a character. That means that you shouldn't use pointer arithmetic to step through the characters in a string, and it means you shouldn't use std::string or standard C functions such as strlen() because they make the same assumption.
@@ -4882,7 +4882,7 @@ for even native speakers to understand. For instance, prefer &quot;application&q
       </sect2>
     </sect1>
 
-    <sect1>
+    <sect1 id="sec-getting_help_with_translations">
       <title>Getting help with translations</title>
 
       <para>If your program is free software, there is a whole <literal>GNOME</literal>
@@ -5015,7 +5015,7 @@ portability..
 <para>Most of our examples use this technique.</para>
 </sect1>
 
-<sect1>
+<sect1 id="sec-using_a_gtkmm_widget">
 <title>Using a gtkmm widget</title>
 
 <para>
@@ -5140,7 +5140,7 @@ listPixmaps.push_back(refPixmap);
 </para>
 </sect1>
 
-<sect1><title>Dereferencing</title>
+<sect1 id="sec-dereferencing"><title>Dereferencing</title>
 <para>You can dereference a smartpointer with the -&gt; operator, to
 call the methods of the underlying instance, just like a normal pointer.
 </para>
@@ -5163,7 +5163,7 @@ Gdk::Bitmap* underlying = *refBitmap; //Syntax error - will not compile.
 </para>
 </sect1>
 
-<sect1><title>Casting</title>
+<sect1 id="sec-casting"><title>Casting</title>
 <para>You can cast RefPtrs to base types, just like normal pointers.</para>
 <para>
 <programlisting>
@@ -5189,7 +5189,7 @@ Glib::RefPtr&lt;Gtk::TreeStore&gt;::cast_static(refModel);
 </sect1>
 
 
-<sect1><title>Checking for null</title>
+<sect1 id="sec-checking_for_null"><title>Checking for null</title>
 <para>Just like normal pointers, you can check whether a RefPtr points
 to anything.</para>
 <para>
@@ -5208,7 +5208,7 @@ initialized to null so you don't need to remember to do that yourself.
 </sect1>
 
 
-<sect1><title>Constness</title>
+<sect1 id="sec-constness"><title>Constness</title>
 <para>The use of the const keyword in C++ is not always clear. You
 might not realise that <literal>const Something*</literal> declares a
 pointer to a const Something, The pointer can be changed, but not the
@@ -5372,7 +5372,7 @@ signal handler you'll be expected to connect to a given signal.
 </para>
 </sect1>
 
-<sect1>
+<sect1 id="sec-writing_signal_handlers">
 <title>Writing signal handlers</title>
 
 <para>
@@ -5426,7 +5426,7 @@ void on_insert_text(const Glib::ustring&amp; text, int length, int* position);
 </para>
 </sect1>
 
-<sect1>
+<sect1 id="sec-disconnecting_signal_handlers">
 <title>Disconnecting signal handlers</title>
 
 <para>
@@ -5447,7 +5447,7 @@ associated signal handler using the method <literal>sigc::connection::disconnect
 </para>
 
 </sect1>
-<sect1>
+<sect1 id="sec-overriding_default_signal_handlers">
 <title>Overriding default signal handlers</title>
 
 <para>
@@ -5520,7 +5520,7 @@ your custom code.
 
 </sect1>
 
-<sect1>
+<sect1 id="sec-binding_extra_arguments">
 <title>Binding extra arguments</title>
 <para>
 If you use one signal handler to catch the same signal from several widgets, you might like that signal handler to receive some extra information. For instance, you might want to know which button was clicked. You can do this with <literal>sigc::bind()</literal>. Here's some code from the <link linkend="sec-helloworld2">helloworld2</link> example, which you will encounter later.
@@ -5867,7 +5867,7 @@ practical - and sensible - to subclass a button for that purpose.
     </sect2>
     </sect1>
 
-    <sect1>
+    <sect1 id="sec-build_with_command_line_tools">
       <title>Command line tools</title>
       <para>
 	To build your gtkmm application with command line tools, we recommend you either use mingw combined with cygwin
@@ -5941,7 +5941,7 @@ practical - and sensible - to subclass a button for that purpose.
       </para>
     </sect1>
 
-  <sect1>
+  <sect1 id="sec-building_on_win32">
 	<title>Building gtkmm on Win32</title>
     <para>Please see the appropriate README file in the source distribution.
     </para>
