@@ -1,3 +1,8 @@
+2005-02-28   Roel Vanhout  <roel.vanhout@gmail.com>
+
+	* docs/tutorial/gtkmm-tut.xml: Add more section ids so that 
+	phpwebnotes would have permanent ids to use.
+
 2.5.7:
 
 2005-02-23  Roel Vanhout  <roel.vanhout@gmail.com>
